--- a/.gitconfig
+++ b/.gitconfig
@@ -10,3 +10,7 @@
 	autoSetupRemote = true
 [core]
 	excludesfile = /Users/pascalsochacki/.gitignore
+[rerere]
+	enabled = true
+[branch]
+	sort = -committerdate
