--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,6 +1,6 @@
 set -g default-terminal "screen-256color"
 set -g prefix C-a
-set -g mode-mouse on
+set -g mouse on
 unbind C-b
 bind-key C-a send-prefix
 
