some config more

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,9 +1,18 @@
 set -g default-terminal "screen-256color"
 set -g prefix C-a
+
 set -g mouse on
 unbind C-b
 bind-key C-a send-prefix
+bind-key -T copy-mode-vi 'v' send -X begin-selection # start selecting text with "v"
+bind-key -T copy-mode-vi 'y' send -X copy-selection # copy text with "y"
 
+unbind -T copy-mode-vi MouseDragEnd1Pane
+setw -g mode-keys vi
+bind -r j resize-pane -D 5
+bind -r k resize-pane -U 5
+bind -r l resize-pane -R 5
+bind -r h resize-pane -L 5
 unbind %
 bind | split-window -h -c "#{pane_current_path}"
 
@@ -14,6 +23,8 @@ unbind r
 bind r source-file ~/.tmux.conf
 
 set -g @plugin 'tmux-plugins/tpm'
+set -g @plugin 'tmux-plugins/tmux-resurrect' 
+set -g @plugin 'tmux-plugins/tmux-continuum'
 
 # list of tmux plugins
 set -g @plugin 'christoomey/vim-tmux-navigator'
