--- a/.tmux.conf
+++ b/.tmux.conf
@@ -7,6 +7,8 @@ bind-key C-a send-prefix
 bind-key -T copy-mode-vi 'v' send -X begin-selection # start selecting text with "v"
 bind-key -T copy-mode-vi 'y' send -X copy-selection # copy text with "y"
 
+bind C-c copy-mode 
+
 unbind -T copy-mode-vi MouseDragEnd1Pane
 setw -g mode-keys vi
 bind -r j resize-pane -D 5
@@ -26,6 +28,9 @@ set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-resurrect' 
 set -g @plugin 'tmux-plugins/tmux-continuum'
 
+set -g @continuum-restore 'on'
+set -g @continuum-boot 'on'
+set -g @continuum-boot-options 'iterm,fullscreen'
 # list of tmux plugins
 set -g @plugin 'christoomey/vim-tmux-navigator'
 
