remove logo from k9s

--- a/.config/k9s/config.yaml
+++ b/.config/k9s/config.yaml
@@ -8,10 +8,10 @@ k9s:
   ui:
     enableMouse: false
     headless: false
-    logoless: false
+    logoless: true
     crumbsless: false
     reactive: false
-    noIcons: false
+    noIcons: true
     defaultsToFullScreen: false
   skipLatestRevCheck: false
   disablePodCounting: false
