--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -1,5 +1,7 @@
 # vim:fileencoding=utf-8:foldmethod=marker
 
+mouse_map cmd+left release grabbed,ungrabbed mouse_handle_click link
+
 #: Fonts {{{
 
 #: kitty has very powerful font management. You can configure
@@ -374,7 +376,7 @@ font_size 12.0
 
 #: Mouse {{{
 
-# mouse_hide_wait 3.0
+mouse_hide_wait 3.0
 
 #: Hide mouse cursor after the specified number of seconds of the
 #: mouse not being used. Set to zero to disable mouse cursor hiding.
@@ -402,7 +404,7 @@ font_size 12.0
 #: The set of URL prefixes to look for when detecting a URL under the
 #: mouse cursor.
 
-# detect_urls yes
+detect_urls yes
 
 #: Detect URLs under the mouse. Detected URLs are highlighted with an
 #: underline and the mouse cursor becomes a hand over them. Even if
@@ -826,7 +828,7 @@ font_size 12.0
 #: horizontal sides. Three values set top, horizontal and bottom. Four
 #: values set top, right, bottom and left.
 
-single_window_margin_width 10
+single_window_margin_width 5 
 
 #: The window margin to use when only a single window is visible (in
 #: pts). Negative values will cause the value of window_margin_width
@@ -2475,3 +2477,4 @@ single_window_margin_width 10
 #: }}}
 
 #: }}}
+
