add font and make it prettier

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -27,6 +27,11 @@ bind r source-file ~/.tmux.conf
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-resurrect' 
 set -g @plugin 'tmux-plugins/tmux-continuum'
+set -g @plugin 'omerxx/tmux-sessionx'
+
+set -g @sessionx-bind-kill-session 'ctrl-x'
+set -g @plugin 'catppuccin/tmux'
+
 
 set -g @continuum-restore 'on'
 set -g @continuum-boot 'on'
