add font to brewfile

--- a/.config/Brewfile
+++ b/.config/Brewfile
@@ -4,6 +4,7 @@ tap "derailed/k9s"
 tap "fluxcd/tap"
 tap "hashicorp/tap"
 tap "homebrew/bundle"
+tap "homebrew/cask-fonts"
 tap "infrahq/tap"
 tap "int128/kubelogin"
 brew "jpeg-xl"
@@ -82,6 +83,7 @@ brew "int128/kubelogin/kubelogin"
 cask "balenaetcher"
 cask "dbeaver-community"
 cask "discord"
+cask "font-hack-nerd-font"
 cask "google-chrome"
 cask "google-cloud-sdk"
 cask "intellij-idea"
