make default branch name to main

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -2,6 +2,7 @@ set -g default-terminal "screen-256color"
 set -g prefix C-a
 
 set -g mouse on
+setw -g mouse on
 unbind C-b
 bind-key C-a send-prefix
 bind-key -T copy-mode-vi 'v' send -X begin-selection # start selecting text with "v"
