--- a/.config/k9s/config.yaml
+++ b/.config/k9s/config.yaml
@@ -13,6 +13,7 @@ k9s:
     reactive: false
     noIcons: true
     defaultsToFullScreen: false
+    skin: pascal-sochacki
   skipLatestRevCheck: false
   disablePodCounting: false
   shellPod:
