rename tmux pane

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -41,5 +41,8 @@ set -g @continuum-boot-options 'iterm,fullscreen'
 # list of tmux plugins
 set -g @plugin 'christoomey/vim-tmux-navigator'
 
+set -g @catppuccin_window_current_text "#{pane_current_command}"
+set -g @catppuccin_window_default_text "#{pane_current_command}"
+
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
 run '~/.tmux/plugins/tpm/tpm'
