--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,3 +1,6 @@
+set -g base-index 1
+setw -g pane-base-index 1
+set-option -g renumber-windows on
 set -g default-terminal "screen-256color"
 set-option -g status-position top
 set -g prefix C-a
