--- a/.gitconfig
+++ b/.gitconfig
@@ -16,3 +16,10 @@
 	sort = -committerdate
 [init]
 	defaultBranch = main
+[merge]
+	tool = "nvim"
+[mergetool]
+	keepBackup = false
+	prompt = false
+[mergetool "nvim"]
+	cmd = "nvim -d -c \"wincmd l\" -c \"norm ]c\" \"$LOCAL\" \"$MERGED\" \"$REMOTE\""
